# esp_extra_crispy

./: Cargo.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
examples/async_experiment/: channel.rs  executor.rs  main.rs  rtc.rs
examples/embassy_hello_world/: main.rs
examples/rotary_button_sync/: main.rs  rotary_button_sync.rs  time.rs
src/: channel.rs  error.rs  executor.rs  lib.rs  rotary_button_sync.rs  time.rs
