[package]
name = "rust_esp"
version = "0.1.0"
edition = "2021"
#default-run = "embassy_hello_world"

[dependencies]  # https://docs.esp-rs.org/book/overview/using-the-core-library.html
esp-hal = { version = "0.22.0", features = [
    "esp32",
    "defmt",
] }
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-println = { version = "0.12.0", features = [
    "esp32",
    "defmt-espflash",
] }
defmt = "0.3.8"
#defmt-rtt = "0.4.1"  # Does not work on ESP XTensa
#xtensa-lx-rt = { version = "0.17.1", features = ["esp32"] }  # probaly not needed cause part of esp_hal?
critical-section = "1.2.0"
fugit = { version = "0.3.7", features = ["defmt"] }  # compile-time time units
heapless = { version = "0.8.0", features = ["portable-atomic"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
embassy-executor = "0.6.3"
embassy-time = { version = "0.3.2", features = []}
esp-hal-embassy = { version = "0.5.0", features = [
    "esp32",
    "defmt",
    "integrated-timers"
]}

[profile.release]
debug = 2
codegen-units = 1
lto = "fat"

[lints.rust]
#unused = "allow"
